[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/base_tank.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/cpu_tank.gd" type="Script" id=2]
[ext_resource path="res://sprites/tank_cpu.png" type="Texture" id=3]
[ext_resource path="res://scripts/cpu_fsm.gd" type="Script" id=4]
[ext_resource path="res://audio/sfx/engine_cpu.wav" type="AudioStream" id=5]

[node name="base_tank" instance=ExtResource( 1 )]
script = ExtResource( 2 )
speed_fwd_max = 40.0
rot_speed = 1.75
shot_period = 3.0
invulnerability_period = 0.5
seek_distance = 10
shot_distance = 175

[node name="tank" parent="." index="2"]
texture = ExtResource( 3 )

[node name="Ray_Front" type="RayCast2D" parent="." index="5"]
enabled = true
cast_to = Vector2( 65, 0 )

[node name="Ray_Front_1" type="RayCast2D" parent="." index="6"]
position = Vector2( 0, -6 )
enabled = true
cast_to = Vector2( 70, 0 )
collision_mask = 3

[node name="Ray_Front_2" type="RayCast2D" parent="." index="7"]
position = Vector2( 0, 6 )
enabled = true
cast_to = Vector2( 70, 0 )
collision_mask = 3

[node name="Ray_Front_3" type="RayCast2D" parent="." index="8"]
enabled = true
cast_to = Vector2( 70, 0 )
collision_mask = 3

[node name="Ray_Front_Right" type="RayCast2D" parent="." index="9"]
enabled = true
cast_to = Vector2( 43.3, 25 )
collision_mask = 3

[node name="Ray_Front_Right2" type="RayCast2D" parent="." index="10"]
enabled = true
cast_to = Vector2( 48, 14 )
collision_mask = 3

[node name="Ray_Front_Left" type="RayCast2D" parent="." index="11"]
enabled = true
cast_to = Vector2( 43.3, -25 )
collision_mask = 3

[node name="Ray_Front_Left2" type="RayCast2D" parent="." index="12"]
enabled = true
cast_to = Vector2( 48, -14 )
collision_mask = 3

[node name="Ray_Right_Front_Turn" type="RayCast2D" parent="." index="13"]
enabled = true
cast_to = Vector2( 35, 36 )
collision_mask = 3

[node name="Ray_Left_Front_Turn" type="RayCast2D" parent="." index="14"]
enabled = true
cast_to = Vector2( 35, -36 )
collision_mask = 3

[node name="raycast_container" type="Node2D" parent="." index="15"]

[node name="Ray_Gun" type="RayCast2D" parent="raycast_container" index="0"]
position = Vector2( 20, 0 )
enabled = true
cast_to = Vector2( 175, 0 )
collision_mask = 3

[node name="Ray_Right_Side" type="RayCast2D" parent="raycast_container" index="1"]
visible = false
position = Vector2( 10, 10 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 2

[node name="Ray_Right_Front" type="RayCast2D" parent="raycast_container" index="2"]
visible = false
position = Vector2( 0, 15 )
enabled = true
cast_to = Vector2( 35, 10 )
collision_mask = 3

[node name="Ray_Left_Side" type="RayCast2D" parent="raycast_container" index="3"]
visible = false
position = Vector2( 10, -10 )
enabled = true
cast_to = Vector2( 0, -15 )
collision_mask = 2

[node name="Ray_Left_Front" type="RayCast2D" parent="raycast_container" index="4"]
visible = false
position = Vector2( 0, -14 )
enabled = true
cast_to = Vector2( 35, -10 )
collision_mask = 2

[node name="Ray_Rear" type="RayCast2D" parent="raycast_container" index="5"]
visible = false
position = Vector2( 0, -1 )
enabled = true
cast_to = Vector2( -70, 0 )
collision_mask = 2

[node name="StateMachine" type="Node2D" parent="." index="16"]
script = ExtResource( 4 )

[node name="Particles_Killed" parent="." index="22"]
z_index = 5

[node name="AudioEngine" parent="." index="23"]
stream = ExtResource( 5 )
volume_db = -30.0
pitch_scale = 9.5
